feat: fetch webinars through api

--- a/styles/branding.scss
+++ b/styles/branding.scss
@@ -34,6 +34,8 @@
 
   --gradient-2: #a200d3;
   --gradient-1: #b45ce3;
+
+  scroll-behavior: smooth;
 }
 .body--dark {
   --highlight-primary: #fba202;
