feat: add courses page

--- a/styles/branding.scss
+++ b/styles/branding.scss
@@ -36,6 +36,8 @@
   --gradient-1: #b45ce3;
 
   scroll-behavior: smooth;
+
+  background-color: var(--bg-1);
 }
 .body--dark {
   --highlight-primary: #fba202;
